# OpenMP3

./: .gitignore  CMakeLists.txt  openmp3.cpp  openmp3.h  readme.txt
[resources]/: example.cpp  readme.txt
include/: openmp3.h
src/: CMakeLists.txt  decoder.cpp  huffman.cpp  huffman.h  iterator.cpp  requantize.cpp  requantize.h  stereo.cpp  stereo.h  synthesis.cpp  synthesis.h  tables.cpp  tables.h  types.h
